# AstalSplit

./: .gitignore  LICENSE  README.md  meson.build
scripts/: scan_room_name.py
src/: astalsplit.in  gresource.xml  main.py  meson.build  profile.out  resources.gresource  style.css  style.scss
src/app/: App.py
src/aslrunner/: Deltarune.asl  asl_parser.py  game_plugins.py  help.py  proc_utils.py
src/aslrunner/games/Deltarune/: deltarune.py
src/games/Deltarune/: deltarune.py
src/lssparser/: LSSParse.py  example.lss
src/timer/: ASLSettingsDialog.py  SplitsBox.py  Timer.py  Timer.scss  TimerBox.py  TimerWindow.py
